<resources>
    <string name="app_name">ChitChat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_after_login_page">AfterLoginPage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="login">Login</string>
    <string name="create_account">Next</string>
    <string name="create_account_heading">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account_text">Not Registered yet ? Create Account</string>
    <string name="login_text">Already have a Account ? Login</string>
    <string name="create_account_terms">By Clicking on create account you are accepting our Terms and Conditions</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="city">City</string>
    <string name="create_account_2_submit">Create Account</string>
    <string name="upload_profile_pic">Upload profile pic</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="tab_chatrooms">Chat</string>
    <string name="tab_myprofile">Profile</string>
    <string name="tab_users">Users</string>
    <string name="tab_chatroom">Chatroom</string>
    <string name="tab_chat_users">Active Users</string>
    <string name="label_join">JOIN</string>
    <string name="invalid_login">Please Input valid Password and Login Information</string>
    <string name="label_view">View</string>
    <string name="gender">Gender</string>
    <string name="send_button">Send</string>
    <string name="enter_message_hint">Enter message here</string>
    <string name="update_city">Update City</string>
    <string name="update_gender">Update Gender</string>
    <string name="update_last_name">Update Last Name</string>
    <string name="update_first_name">Update First Name</string>
    <string name="update_password">Update Password</string>
    <string name="profile_image">profile image</string>
    <string name="title_activity_request_ride">Request Ride</string>
    <string name="submit_request">Submit Request</string>
    <string name="search">Search</string>
    <string name="Pickup_loc">Pickup Location</string>
    <string name="dropoff_loc">Dropoff Location</string>
    <string name="select">Select</string>
    <string name="badge_new">New</string>
    <string name="title_activity_select_driver">Ride Request</string>
    <string name="no_ride_request">No ride request</string>
    <string name="no_driver">No one accepted your request</string>
    <string name="invalid_location">Pickup/Dropoff location is invalid. Try again</string>
    <string name="accept_request">Accept Request</string>
    <string name="start_ride">Start ride</string>
    <string name="view_map">View Map</string>
    <string name="add_driver_success">Thank you for accepting request</string>
    <string name="unable_accept_request">This ride no longer accepts offer</string>
    <string name="unable_start_ride">The ride has started or completed</string>
    <string name="google_maps_key">AIzaSyBNqI8ClNOkg6O2LLdnIurwYyL54aN8iUo</string>
    <string name="trip_history">Trips</string>
    <string name="trip_complete_dialog">Is Your Trip Complete?</string>
</resources>
