<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/firstNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/textView6"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="7dp"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/lastNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameTV"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView7"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="7dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameTV"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView8"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="7dp"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/genderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTV"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView9"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="7dp"
        android:text="@string/city" />

    <TextView
        android:id="@+id/cityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genderTV"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView10"
        android:text="TextView" />


</RelativeLayout>