<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_background"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/userImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
        <ImageView
            android:id="@+id/trash"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            card_view:srcCompat="@mipmap/ic_trash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/postedTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/app_name"
            android:gravity="center_vertical"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/view_map"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/view_map"
            android:layout_margin="5dp"
            android:textSize="12dp"
            android:background="@drawable/button_background_no_margin"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/accept_request"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/accept_request"
            android:layout_margin="5dp"
            android:textSize="12dp"
            android:background="@drawable/button_background_no_margin"
            android:textColor="@color/textColor"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/likes"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Like Message"
                card_view:srcCompat="@drawable/ic_like_thumb_up"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>